...
}

- (void) setupSegmentControl {
    _width = self.view.frame.size.width;
    float y = self.navigationController.navigationBar.frame.size.height + UIApplication.sharedApplication.statusBarFrame.size.height;
    _segmentedControl = [[SegmentedControl alloc] init];
    _segmentedControl = [_segmentedControl initWithFrame: CGRectMake(0, y, _width, 50) withItems: @[@"All Movies", @"My Movies"]];
    [_segmentedControl addTarget:self action:@selector(setCurrentView) forControlEvents:UIControlEventValueChanged];
    [self.view addSubview:_segmentedControl];
    _segmentedControl.backgroundColor = [UIColor appColor];
    NSDictionary *attributes = [NSDictionary dictionaryWithObjectsAndKeys:
                                [UIFont boldSystemFontOfSize:17], NSFontAttributeName,
                                [UIColor whiteColor], NSForegroundColorAttributeName,
...
