...
- (CGSize)collectionView:(UICollectionView *)collectionView layout:(UICollectionViewLayout *)collectionViewLayout referenceSizeForFooterInSection:(NSInteger)section {
    return CGSizeMake(collectionView.bounds.size.width, 40);
}

- (void) addNoMovieLabel {
    self.noMovieLabel = [[UILabel alloc] init];
    self.noMovieLabel.text = @"No Movie Available";
    self.noMovieLabel.textColor = UIColor.appTextColor;
    self.noMovieLabel.font = [UIFont boldSystemFontOfSize: 20];
    self.noMovieLabel.textAlignment = NSTextAlignmentCenter;
    [self addSubview:self.noMovieLabel];
    [self.noMovieLabel setTranslatesAutoresizingMaskIntoConstraints:NO];
    [self.noMovieLabel.leadingAnchor constraintEqualToAnchor: self.leadingAnchor].active = YES;
...
